# cortex.ai

./: .env.example  README.md  pyproject.toml
backend/: config.py  dependencies.py  main.py
backend/clients/: openai_client.py
backend/endpoints/: feed.py
backend/models/: ai_schemas.py  feed_schemas.py  reddit_schemas.py  x_schemas.py
backend/services/: feed.py  openai.py  reddit.py  x.py
frontend/: streamlit_app.py
frontend/.streamlit/: config.toml
frontend/pages/: 1_Feed.py  2_About.py  3_Analytics.py
frontend/styles/: main.css
frontend/utils/: api.py  helpers.py
tests/: conftest.py  golden_posts.py  test_feed_service.py  test_llm_judge.py  test_openai_service.py  test_reddit_service.py  test_x_service.py
