[project]
name = "cortex-ai"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
   "fastapi[standard]",
   "streamlit",
   "uvicorn",
   "httpx",
   "pydantic",
   "feedparser",
   "beautifulsoup4>=4.15.0",
   "openai>=2.41.1",
   "apscheduler>=3.11.2",
   "python-dotenv",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]  # line too long, handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = ["."]
markers = [
    "integration: calls the real OpenAI API — requires OPENAI_API_KEY (deselect with -m 'not integration')",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
